// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> matches render snapshot - login form 1`] = `
<div
  className="sidebar"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <h2
    className="mh4"
  >
    Eat Drink Healthy
  </h2>
  <div
    className="pitch"
  >
    A platform to find, share, and discuss healthy places to shop and eat.
  </div>
  <div
    className="get-started"
  >
    Get Started
  </div>
  <div
    className="pt2 pl4 pr4 pb4"
  >
    <form
      className="measure center"
      onSubmit={[Function]}
    >
      <fieldset
        className="ba b--transparent ph0 mh0"
        id="sign_in"
      >
        <legend
          className="f4 fw6 ph0 mh0"
        >
          Login
        </legend>
        <div
          className="mt3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="usernameEmail"
          >
            Username / Email
          </label>
          <input
            className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="usernameEmail"
            name="usernameEmail"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="mv3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="password"
          >
            Password
          </label>
          <input
            className="b pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="password"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
      </fieldset>
      <div>
        <input
          className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib"
          type="submit"
          value="Login"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`<Sidebar /> matches render snapshot - no action form 1`] = `
<div
  className="sidebar"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <h2
    className="mh4"
  >
    Eat Drink Healthy
  </h2>
  <div
    className="pitch"
  >
    A platform to find, share, and discuss healthy places to shop and eat.
  </div>
  <div
    className="get-started"
  >
    Get Started
  </div>
  <div />
</div>
`;

exports[`<Sidebar /> matches render snapshot - signup form 1`] = `
<div
  className="sidebar"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <h2
    className="mh4"
  >
    Eat Drink Healthy
  </h2>
  <div
    className="pitch"
  >
    A platform to find, share, and discuss healthy places to shop and eat.
  </div>
  <div
    className="get-started"
  >
    Get Started
  </div>
  <div
    className="pt2 pl4 pr4 pb4"
  >
    <form
      className="measure center"
      onSubmit={[Function]}
    >
      <fieldset
        className="ba b--transparent ph0 mh0"
        id="sign_up"
      >
        <legend
          className="f4 fw6 ph0 mh0"
        >
          Create Account
        </legend>
        <div
          className="mt3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="username"
          >
            Username
          </label>
          <input
            className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="username"
            name="username"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="mt3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="email"
          >
            Email
          </label>
          <input
            className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="email"
            name="email"
            onChange={[Function]}
            type="email"
            value=""
          />
        </div>
        <div
          className="mv3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="password"
          >
            Password
          </label>
          <input
            className="b pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="password"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="mv3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="confirmPassword"
          >
            Confirm Password
          </label>
          <input
            className="b pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="confirmPassword"
            name="confirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
      </fieldset>
      <div>
        <input
          className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib"
          type="submit"
          value="Create Account"
        />
      </div>
    </form>
  </div>
</div>
`;
